# rust_projects

./: .gitignore
SolarSystem/data/: celestial_bodies_data.toml
SolarSystem/python_modules/: get_data.py  simulation.py
SolarSystem/rust_modules/: Cargo.toml
SolarSystem/rust_modules/src/: data.toml  main.rs  orbit_propagration.rs  planet.rs
blackjack/: Cargo.toml
blackjack/src/: deck_of_cards.rs  main.rs  variables.toml
optimization/: notes.txt  sim_annealing_questions
slot_machine/: Cargo.toml
slot_machine/src/: main.rs
sudoku/: Cargo.toml  parameters.toml
sudoku/src/: main.rs  solve.rs  sudoku.rs
