[package]
name = "blackjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
rand = "0.8.4"
toml = "0.7.4"
serde = "1.0.136"
serde_derive = "1.0.136"
text_io = "0.1.12"